--- a/index.css
+++ b/index.css
@@ -1,6 +1,30 @@
+*{
+    cursor:none;
+}
 body{
     background-color: rgb(238, 238, 238);
     height: 112cm;
+}
+/*Custom Cursor*/
+.cursor-dot{
+    width: 5px;
+    height: 5px;
+
+    background-color: black;
+}
+.cursor-outline{
+    width: 30px;
+    height: 30px;
+    border: 2px solid darkgray;
+}
+.cursor-dot, .cursor-outline{
+    position: fixed;
+    top: 0;
+    left: 0;
+    transform: translate(-50%,-50%);
+    border-radius: 50%;
+    z-index: 3;
+    pointer-events: none;
 }
 section.profile{
     width: 100%;
