--- a/index.css
+++ b/index.css
@@ -1,9 +1,9 @@
 *{
-    cursor:none;
+    cursor: none;
 }
 body{
     background-color: rgb(238, 238, 238);
-    height: 112cm;
+    height: 109.5cm;
 }
 /*Custom Cursor*/
 .cursor-dot{
@@ -26,6 +26,7 @@ body{
     z-index: 3;
     pointer-events: none;
 }
+
 section.profile{
     width: 100%;
     height: 30cm;
@@ -149,7 +150,7 @@ section.profile h2.quote{
 /*SKILLS BLOCK*/
 
 div.skills{
-    margin-top: 3%;
+    margin-top: 0%;
     width: 100%;
     height: 30cm;
 
@@ -177,7 +178,7 @@ div.skills h1 div.bubble3{
 /* PROGRAMMING LANGUAGES */
 /* Setting logos on h1 tag */
 div.programming-languages{
-    margin-top: 100px;
+    margin-top: 80px;
     display: flex;
     justify-content: center;
 }
@@ -353,7 +354,7 @@ div.logos img.jupyter{
 /* PROJECTS */
 
 div.projects{
-    margin-top: 7%;         
+    margin-top: 5%;         
     width: 100%;
 
     text-align: center;
@@ -382,7 +383,7 @@ div.projects h1 div.bubble_for_projects{
 /* Projects row1 */
 div.projects-row1{
     width: 100%;
-    height: 440px;
+    height: 420px;
 
     display: flex;
     justify-content: center;
@@ -437,7 +438,7 @@ h3 a{
     font-family: "Cedarville Cursive", cursive;
 }
 a.source{
-    background-color: lightblue;
+    background-color: rgb(230, 204, 173);
     border-radius: 8px;
     padding: 0px 10px;
     color: black;
@@ -451,14 +452,14 @@ a.presen{
 }
 a.source:hover, a.presen:hover{
     background-color: lightgray;
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
 }
 /*------------------------------------------------------------------*/
 
 /* Projects row2 */
 div.projects-row2{
     width: 100%;
-    height: 440px;
+    height: 420px;
     display: flex;
     justify-content: center;
     gap: 3%;
@@ -468,7 +469,7 @@ div.projects-row2{
 /* Projects row3 */
 div.projects-row3{
     width: 100%;
-    height: 440px;
+    height: 420px;
     display: flex;
     justify-content: center;
     gap: 3%;
@@ -485,6 +486,7 @@ div.contact{
 
     display: flex;
     justify-content: center;
+    margin-top: 20px;
 }
 div.contact h1{
     font-family: "Courier Prime", monospace;
