--- a/content.css
+++ b/content.css
@@ -1,11 +1,6 @@
 body{
     margin: 0px;
     padding: 0px;
-    -webkit-user-select: none; /* Chrome, Safari, Opera */
-    -moz-user-select: none;    /* Firefox */
-    -ms-user-select: none;     /* Internet Explorer/Edge */
-    user-select: none;         /* Non-prefixed version, currently supported by all major browsers */
-
 }
 
 .da, .ds, .ml, .dl, .nlp, .web, .llm{
@@ -14,6 +9,12 @@ body{
     display: flex;
     justify-content: center;
     font-family: "Afacad";
+
+    -webkit-user-select: none; /* Chrome, Safari, Opera */
+    -moz-user-select: none;    /* Firefox */
+    -ms-user-select: none;     /* Internet Explorer/Edge */
+    user-select: none;         /* Non-prefixed version, currently supported by all major browsers */
+
 }
 .da h1, .ds h1, .ml h1, .dl h1, .nlp h1, .web h1, .llm h1{
     color: aliceblue;
@@ -50,7 +51,7 @@ body{
 /* Slide Toogle using Jquery */
 .inner_da, .inner_ds, .inner_ml, .inner_dl, .inner_nlp, .inner_web, .inner_llm{
     width: 100%;
-    height: 400px;
+    height: 680px;
     background-color:whitesmoke;
     display: none;
 }
@@ -65,5 +66,73 @@ body{
 }
 
 .soon_info_highlight{
+    color: crimson;
+}
+/*Some globals*/
+.introduction{
+    color: darkcyan;
+    margin: 0px;
+    font-family: "ubuntu";
+    text-align: center;
+    padding-top: 50px;
+}
+.int_description{
+    margin-top: 25px;
+    padding: 0px 300px;
+    text-align: center;
+    font-family: "Courier Prime", monospace;
+    font-size: 18px;
+}
+.books{
+    color:goldenrod;
+    margin: 0px;
+    font-family: "ubuntu";
+    text-align: center;
+    padding-top: 25px;
+    padding-bottom:10px ;
+}
+.book_descrition{
+    margin: 0px;
+    padding: 0px 300px;
+    padding-top: 10px;
+    text-align: center;
+    font-family: "Courier Prime", monospace;
+    font-size: 18px;
+}
+.tools{
+    color:indianred;
+    margin: 0px;
+    font-family: "ubuntu";
+    text-align: center;
+    padding-top: 42px;
+}
+.tools_description{
+    margin-top: 25px;
+    padding: 0px 300px;
+    text-align: center;
+    font-family: "Courier Prime", monospace;
+    font-size: 18px;
+}
+.courses{
+    color: indigo;
+    margin: 0px;
+    font-family: "ubuntu";
+    text-align: center;
+    padding-top: 25px;
+    padding-bottom:10px ;
+}
+.courses_description{
+    margin: 0px;
+    padding: 0px 300px;
+    padding-top: 10px;
+    text-align: center;
+    font-family: "Courier Prime", monospace;
+    font-size: 18px;   
+}
+a{
+    text-decoration: none;
+    color: black;
+}
+a:hover{
     color: crimson;
 }
